# proxy-rust-web-mini

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/services/: route.rs
src/static/: login.html  register.html  welcome.htm
www/css/: login.css  register.css
www/js/: login.js  register.js
