[package]
name = "proxy-web-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leveldb = "0.8"
db-key = "0.0.5"
warp = "0.3"
tokio = {version = "1",features = ["fs", "sync", "time","macros","rt-multi-thread","process"]}
log = "0.4"
log4rs = {version = "1.0"}
serde = {version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
http = "0.2"
handlebars = { version = "3"}

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
